external/lib25519-20241004/build/arm64/mGnP/ed25519/arm64-maa4-intmul/shared/result-compile-ge25519_double_scalarmult_process
ge25519_double_scalarmult_process.S:4421:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
